A basic search result detail page

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,5 +1,10 @@
 <resources>
-    <!-- Default screen margins, per the Android Design guidelines. -->
-    <dimen name="activity_horizontal_margin">16dp</dimen>
-    <dimen name="activity_vertical_margin">16dp</dimen>
+    <dimen name="textSize_small">14dp</dimen>
+    <dimen name="textSize_base">18dp</dimen>
+    <dimen name="textSize_large">20dp</dimen>
+    <dimen name="textSize_extraLarge">30dp</dimen>
+    <dimen name="textSize_extraExtraLarge">42dp</dimen>
+
+    <dimen name="activity_margin">16dp</dimen>
+    <dimen name="activity_marginTop_large">60dp</dimen>
 </resources>
