--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,8 +22,9 @@
             android:id="@+id/main_search_container"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginHorizontal="16dp"
-            android:layout_marginTop="60dp"
+            android:layout_marginHorizontal="@dimen/activity_margin"
+            android:layout_marginTop="@dimen/activity_marginTop_large"
+            android:layout_marginBottom="@dimen/activity_margin"
             android:orientation="horizontal"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toTopOf="parent">
@@ -97,11 +98,8 @@
 
         <ListView
             android:id="@+id/search_results_list_view"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            style="@style/ListViewBaseStyle"
             android:layout_marginTop="16dp"
-            android:divider="@null"
-            android:dividerHeight="0dp"
             app:layout_constraintTop_toBottomOf="@id/main_search_container"
             android:visibility="@{viewModel.areSearchResultsVisible ? View.VISIBLE : View.GONE}" />
 
