--- a/app/src/main/res/layout/activity_search_result_detail.xml
+++ b/app/src/main/res/layout/activity_search_result_detail.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout
-    xmlns:android="http://schemas.android.com/apk/res/android">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
         <variable
@@ -12,9 +12,30 @@
 
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:layout_marginHorizontal="@dimen/activity_margin"
+        android:layout_marginTop="@dimen/activity_marginTop_large"
+        android:layout_marginBottom="@dimen/activity_margin">
 
+        <TextView
+            android:id="@+id/activity_search_result_detail_japanese_reading"
+            style="@style/FuriganaTextViewStyle"
+            android:text="@{viewModel.searchResult.japaneseReading}"
+            android:textSize="@dimen/textSize_base"
+            app:layout_constraintTop_toTopOf="parent" />
 
+        <TextView
+            android:id="@+id/activity_search_result_detail_japanese_word"
+            style="@style/KanjiTextViewStyle"
+            android:text="@{viewModel.searchResult.japaneseWord}"
+            android:textSize="@dimen/textSize_extraExtraLarge"
+            app:layout_constraintTop_toBottomOf="@id/activity_search_result_detail_japanese_reading"/>
+
+        <ListView
+            android:id="@+id/activity_search_result_detail_english_meanings"
+            style="@style/ListViewBaseStyle"
+            android:layout_marginTop="32dp"
+            app:layout_constraintTop_toBottomOf="@id/activity_search_result_detail_japanese_word" />
 
     </android.support.constraint.ConstraintLayout>
 </layout>
