--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="colorPrimaryDark">#4BB29E</color>
     <color name="colorAccent">#7BD9C7</color>
     <color name="subtleGray">#D8D8D8</color>
+    <color name="foreground_base">@android:color/black</color>
 </resources>
