--- a/app/src/main/res/layout/activity_search_result_detail.xml
+++ b/app/src/main/res/layout/activity_search_result_detail.xml
@@ -31,11 +31,25 @@
             android:textSize="@dimen/textSize_extraExtraLarge"
             app:layout_constraintTop_toBottomOf="@id/activity_search_result_detail_japanese_reading"/>
 
+        <TextView
+            android:id="@+id/activity_search_result_detail_common_word"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/colorPrimaryDark"
+            android:text="common word"
+            android:textAllCaps="true"
+            android:textSize="@dimen/textSize_small"
+            android:paddingVertical="2dp"
+            android:paddingHorizontal="8dp"
+            android:layout_marginTop="12dp"
+            app:layout_constraintTop_toBottomOf="@id/activity_search_result_detail_japanese_word"
+            android:visibility="@{viewModel.searchResult.isCommon ? View.VISIBLE : View.GONE}"/>
+
         <ListView
             android:id="@+id/activity_search_result_detail_english_meanings"
             style="@style/ListViewBaseStyle"
             android:layout_marginTop="32dp"
-            app:layout_constraintTop_toBottomOf="@id/activity_search_result_detail_japanese_word" />
+            app:layout_constraintTop_toBottomOf="@id/activity_search_result_detail_common_word" />
 
     </android.support.constraint.ConstraintLayout>
 </layout>
