--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,119 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout
-    xmlns:android="http://schemas.android.com/apk/res/android">
-
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
     <data>
-        <variable
-            name="viewModel"
-            type="com.kratochvil.kotobaten.viewmodel.MainViewModel" />
-
         <import type="android.view.View"/>
     </data>
 
-    <android.support.constraint.ConstraintLayout
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
-        android:id="@+id/container"
+    <android.support.v4.widget.DrawerLayout
+        android:id="@+id/activity_main_drawer"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".view.activity.MainActivity">
+        android:fitsSystemWindows="true">
 
-        <LinearLayout
-            android:id="@+id/main_search_container"
+        <FrameLayout
+            android:id="@+id/activity_main_content"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginHorizontal="@dimen/activity_margin"
-            android:layout_marginTop="@dimen/activity_marginTop_large"
-            android:layout_marginBottom="@dimen/activity_margin"
-            android:orientation="horizontal"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
-
-            <ImageView
-                android:id="@+id/main_search_icon"
-                android:layout_width="24dp"
-                android:layout_height="24dp"
-                android:layout_gravity="center_vertical"
-                android:layout_marginTop="4dp"
-                android:layout_marginRight="8dp"
-                android:layout_weight="0"
-                android:src="@drawable/ic_search_black_24dp" />
-
-            <EditText
-                android:id="@+id/main_search_edit_text"
-                android:layout_weight="1"
+            android:layout_height="match_parent">
+            <fragment
+                android:id="@+id/search_fragment"
+                class="com.kratochvil.kotobaten.view.fragment.SearchFragment"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:inputType="text"
-                android:textSize="32dp"
-                android:hint="Search"
-                android:imeOptions="actionSearch"
-                android:imeActionLabel="Search"
-                android:imeActionId="1"
-                android:text="@={viewModel.searchTerm}"
-                android:textColor="@color/colorPrimaryDark"
-                android:background="@android:color/transparent"
-                android:selectAllOnFocus="true"/>
+                android:layout_height="match_parent" />
+        </FrameLayout>
 
-        </LinearLayout>
-
-        <ProgressBar
-            android:id="@+id/main_loading_results_progress_bar"
+        <android.support.design.widget.NavigationView
+            android:id="@+id/activity_main_navigation"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintRight_toRightOf="@id/main_search_container"
-            app:layout_constraintTop_toTopOf="@id/main_search_container"
-            app:layout_constraintBottom_toBottomOf="@id/main_search_container"
-            android:minHeight="12pt"
-            android:maxHeight="12pt"
-            android:maxWidth="12pt"
-            android:minWidth="12pt"
-            android:visibility="@{viewModel.loadingResults ? View.VISIBLE : View.GONE}"/>
+            android:layout_height="match_parent"
+            android:layout_gravity="start"
+            android:fitsSystemWindows="true"
+            app:itemIconTint="@color/darkGray"
+            app:itemTextColor="@color/darkGray"
+            app:menu="@menu/drawer_main"
+            app:headerLayout="@layout/main_drawer_header"/>
 
-        <Button
-            android:id="@+id/main_clear_search_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintRight_toRightOf="@id/main_search_container"
-            app:layout_constraintTop_toTopOf="@id/main_search_container"
-            android:layout_marginTop="8dp"
-            app:layout_constraintBottom_toBottomOf="@id/main_search_container"
-            android:drawableLeft="@drawable/ic_clear_black_24dp"
-            android:background="@android:color/transparent"
-            android:minWidth="0dp"
-            android:paddingLeft="24dp"
-            android:visibility="@{viewModel.clearSearchTermUiVisible ? View.VISIBLE : View.GONE}"
-            android:onClick="@{() -> viewModel.clearSearchTerm()}"/>
-
-        <ImageView
-            android:id="@+id/main_no_results_icon"
-            android:layout_width="96dp"
-            android:layout_height="96dp"
-            android:src="@drawable/sakura_leaf"
-            android:layout_marginTop="144dp"
-            app:layout_constraintTop_toBottomOf="@id/main_search_container"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            android:visibility="@{viewModel.emptyScreenUiVisible ? View.VISIBLE : View.GONE}"/>
-
-        <ListView
-            android:id="@+id/search_results_list_view"
-            style="@style/ListViewBaseStyle"
-            android:layout_marginTop="16dp"
-            app:layout_constraintTop_toBottomOf="@id/main_search_container"
-            android:visibility="@{viewModel.areSearchResultsVisible ? View.VISIBLE : View.GONE}" />
-
-        <!--<android.support.design.widget.BottomNavigationView
-            android:id="@+id/navigation"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="0dp"
-            android:layout_marginStart="0dp"
-            android:background="?android:attr/windowBackground"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:menu="@menu/navigation" />-->
-
-    </android.support.constraint.ConstraintLayout>
+    </android.support.v4.widget.DrawerLayout>
 </layout>
