--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="colorAccent">#7BD9C7</color>
     <color name="subtleGray">#D8D8D8</color>
     <color name="foreground_base">@android:color/black</color>
+    <color name="darkGray">#666666</color>
 </resources>
