--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -5,7 +5,7 @@
     <data>
         <variable
             name="viewModel"
-            type="com.kratochvil.kotobaten.viewmodel.MainViewModel" />
+            type="com.kratochvil.kotobaten.viewmodel.SearchViewModel" />
 
         <import type="android.view.View"/>
     </data>
