--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,6 +16,13 @@
             android:id="@+id/activity_main_content"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
+            <android.support.v7.widget.Toolbar
+                android:id="@+id/main_activity_actionBar"
+                android:layout_width="match_parent"
+                android:layout_height="?attr/actionBarSize"
+                android:background="@android:color/transparent"
+                android:theme="@style/ThemeOverlay.AppCompat.ActionBar"/>
+
             <fragment
                 android:id="@+id/search_fragment"
                 android:tag="searchFragment"
