--- a/app/src/main/res/layout/fragment_history.xml
+++ b/app/src/main/res/layout/fragment_history.xml
@@ -11,7 +11,36 @@
     </data>
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:layout_marginHorizontal="@dimen/activity_margin"
+        android:layout_marginTop="@dimen/activity_marginTop_large">
 
+        <android.support.v7.widget.SwitchCompat
+            android:id="@+id/history_all_or_favorites_switch"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="36dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            android:checked="@={viewModel.showOnlyFavoriteResults}"/>
+
+        <TextView
+            android:id="@+id/history_all_or_favorites_label"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintLeft_toRightOf="@id/history_all_or_favorites_switch"
+            app:layout_constraintTop_toTopOf="@id/history_all_or_favorites_switch"
+            app:layout_constraintBottom_toBottomOf="@id/history_all_or_favorites_switch"
+            android:layout_marginLeft="12dp"
+            android:text="Favorites only"
+            android:textSize="@dimen/textSize_base"
+            android:textColor="@color/darkGray"/>
+
+        <ListView
+            android:id="@+id/history_results_list_view"
+            style="@style/ListViewBaseStyle"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toBottomOf="@id/history_all_or_favorites_switch"/>
     </android.support.constraint.ConstraintLayout>
 </layout>
