--- a/app/src/main/res/layout/activity_search_result_detail.xml
+++ b/app/src/main/res/layout/activity_search_result_detail.xml
@@ -14,36 +14,26 @@
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginHorizontal="@dimen/activity_margin"
-        android:layout_marginTop="@dimen/activity_marginTop_large"
-        android:layout_marginBottom="@dimen/activity_margin">
+        android:layout_margin="@dimen/activity_margin">
 
-        <TextView
-            android:id="@+id/activity_search_result_detail_japanese_reading"
-            style="@style/FuriganaTextViewStyle"
-            android:text="@{viewModel.searchResult.japaneseReading}"
-            android:textSize="@dimen/textSize_base"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <TextView
-            android:id="@+id/activity_search_result_detail_japanese_word"
-            style="@style/KanjiTextViewStyle"
-            android:text="@{viewModel.searchResult.japaneseWord}"
-            android:textSize="@dimen/textSize_extraExtraLarge"
-            app:layout_constraintTop_toBottomOf="@id/activity_search_result_detail_japanese_reading"/>
+        <Button
+            android:id="@+id/search_result_navigation_button"
+            style="@style/NavigationButtonStyle"
+            android:background="@drawable/ic_arrow_back_black_24dp"/>
 
         <LinearLayout
-            android:id="@+id/activity_search_result_history_layout"
+            android:id="@+id/search_result_favorited_container"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_constraintTop_toBottomOf="@id/activity_search_result_detail_japanese_word"
-            app:layout_constraintLeft_toLeftOf="parent"
-            android:layout_marginTop="12dp">
+            app:layout_constraintRight_toLeftOf="parent"
+            app:layout_constraintTop_toTopOf="@id/search_result_navigation_button"
+            app:layout_constraintBottom_toBottomOf="@id/search_result_navigation_button"
+            android:layout_marginTop="@dimen/element_margin_base">
 
             <com.mikhaellopez.circularprogressbar.CircularProgressBar
-                android:id="@+id/activity_search_result_history_count"
-                android:layout_width="18dp"
-                android:layout_height="18dp"
+                android:id="@+id/search_result_autofavorite_progress"
+                android:layout_width="@dimen/element_margin_large"
+                android:layout_height="@dimen/element_margin_large"
                 app:cpb_progressbar_color="@color/colorPrimary"
                 app:cpb_progressbar_width="2dp"
                 app:cpb_background_progressbar_color="@color/subtleGray"
@@ -51,35 +41,60 @@
                 android:visibility="@{viewModel.isFrequent ? View.GONE : View.VISIBLE}"/>
 
             <ImageView
-                android:id="@+id/activity_search_result_history_isFrequent"
-                android:layout_width="20dp"
-                android:layout_height="20dp"
+                android:id="@+id/search_result_is_favorited"
+                android:layout_width="@dimen/element_margin_large"
+                android:layout_height="@dimen/element_margin_large"
                 android:src="@drawable/ic_stars_black_24dp"
                 android:visibility="@{viewModel.isFrequent ? View.VISIBLE : View.GONE}"/>
 
         </LinearLayout>
 
         <TextView
-            android:id="@+id/activity_search_result_detail_common_word"
+            android:id="@+id/search_result_furigana"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            style="@style/FuriganaTextViewStyle"
+            android:layout_marginStart="@dimen/element_margin_large"
+            android:text="@{viewModel.searchResult.japaneseReading}"
+            android:textSize="@dimen/textSize_base"
+            android:layout_marginTop="@dimen/element_margin_extra_large"
+            app:layout_constraintTop_toBottomOf="@id/search_result_navigation_button"
+            app:layout_constraintLeft_toRightOf="@id/search_result_navigation_button"/>
+
+        <TextView
+            android:id="@+id/search_result_kana"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            style="@style/KanjiTextViewStyle"
+            android:text="@{viewModel.searchResult.japaneseWord}"
+            android:textSize="@dimen/textSize_extraExtraLarge"
+            app:layout_constraintTop_toBottomOf="@id/search_result_furigana"
+            app:layout_constraintLeft_toLeftOf="@id/search_result_furigana"/>
+
+        <TextView
+            android:id="@+id/search_result_is_common"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="@color/colorPrimaryDark"
             android:text="common word"
             android:textAllCaps="true"
             android:textSize="@dimen/textSize_small"
-            android:paddingVertical="2dp"
-            android:paddingHorizontal="8dp"
-            android:layout_marginLeft="10dp"
-            app:layout_constraintTop_toTopOf="@id/activity_search_result_history_layout"
-            app:layout_constraintBottom_toBottomOf="@id/activity_search_result_history_layout"
-            app:layout_constraintLeft_toRightOf="@id/activity_search_result_history_layout"
+            app:layout_constraintTop_toBottomOf="@id/search_result_kana"
+            app:layout_constraintLeft_toLeftOf="@id/search_result_kana"
             android:visibility="@{viewModel.searchResult.isCommon ? View.VISIBLE : View.GONE}"/>
 
         <ListView
-            android:id="@+id/activity_search_result_detail_english_meanings"
+            android:id="@+id/search_result_english_meanings"
             style="@style/ListViewBaseStyle"
-            android:layout_marginTop="32dp"
-            app:layout_constraintTop_toBottomOf="@id/activity_search_result_detail_common_word" />
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_marginTop="@dimen/element_margin_extra_large"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/search_result_is_common"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintVertical_chainStyle="spread"
+            app:layout_constraintHorizontal_chainStyle="spread"/>
 
     </android.support.constraint.ConstraintLayout>
 </layout>
