--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -15,91 +15,95 @@
         android:id="@+id/container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".view.activity.MainActivity">
+        tools:context=".view.activity.MainActivity"
+        android:padding="@dimen/activity_margin">
 
-        <LinearLayout
-            android:id="@+id/main_search_container"
-            android:layout_width="match_parent"
+        <Button
+            android:id="@+id/search_result_navigation_button"
+            style="@style/NavigationButtonStyle"/>
+
+        <ImageView
+            android:id="@+id/search_find_icon"
+            android:layout_width="@dimen/element_margin_large"
+            android:layout_height="@dimen/element_margin_large"
+            android:layout_gravity="center_vertical"
+            android:layout_marginTop="@dimen/textSize_extraExtraLarge"
+            android:layout_marginBottom="@dimen/element_margin_large"
+            android:layout_weight="0"
+            android:src="@drawable/ic_search_accented_24dp"
+            app:layout_constraintTop_toBottomOf="@id/search_result_navigation_button"
+            app:layout_constraintLeft_toLeftOf="@id/search_result_navigation_button"
+            app:layout_constraintRight_toRightOf="@id/search_result_navigation_button" />
+
+        <EditText
+            android:id="@+id/search_search_field"
+            android:layout_weight="1"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginHorizontal="@dimen/activity_margin"
-            android:layout_marginTop="@dimen/activity_marginTop_large"
-            android:layout_marginBottom="@dimen/activity_margin"
-            android:orientation="horizontal"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
+            android:inputType="text"
+            android:textSize="32dp"
+            android:hint="Search"
+            android:layout_marginStart="@dimen/element_margin_large"
+            android:layout_marginEnd="@dimen/element_margin_large"
+            android:layout_marginBottom="4dp"
+            android:imeOptions="actionSearch"
+            android:imeActionLabel="Search"
+            android:imeActionId="1"
+            android:text="@={viewModel.searchTerm}"
+            android:textColor="@color/colorPrimaryDark"
+            android:background="@android:color/transparent"
+            app:layout_constraintTop_toTopOf="@id/search_find_icon"
+            app:layout_constraintBottom_toBottomOf="@id/search_find_icon"
+            app:layout_constraintLeft_toRightOf="@id/search_find_icon"
+            app:layout_constraintHorizontal_chainStyle="spread"/>
 
-            <ImageView
-                android:id="@+id/main_search_icon"
-                android:layout_width="24dp"
-                android:layout_height="24dp"
-                android:layout_gravity="center_vertical"
-                android:layout_marginTop="4dp"
-                android:layout_marginRight="8dp"
-                android:layout_weight="0"
-                android:src="@drawable/ic_search_accented_24dp" />
 
-            <EditText
-                android:id="@+id/main_search_edit_text"
-                android:layout_weight="1"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:inputType="text"
-                android:textSize="32dp"
-                android:hint="Search"
-                android:imeOptions="actionSearch"
-                android:imeActionLabel="Search"
-                android:imeActionId="1"
-                android:text="@={viewModel.searchTerm}"
-                android:textColor="@color/colorPrimaryDark"
-                android:background="@android:color/transparent"
-                android:selectAllOnFocus="true"/>
-
-        </LinearLayout>
 
         <ProgressBar
-            android:id="@+id/main_loading_results_progress_bar"
+            android:id="@+id/search_loading_indicator"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_constraintRight_toRightOf="@id/main_search_container"
-            app:layout_constraintTop_toTopOf="@id/main_search_container"
-            app:layout_constraintBottom_toBottomOf="@id/main_search_container"
-            android:minHeight="12pt"
-            android:maxHeight="12pt"
-            android:maxWidth="12pt"
-            android:minWidth="12pt"
+            app:layout_constraintRight_toLeftOf="parent"
+            app:layout_constraintTop_toTopOf="@id/search_search_field"
+            app:layout_constraintBottom_toBottomOf="@id/search_search_field"
+            android:minHeight="@dimen/element_margin_large"
+            android:maxHeight="@dimen/element_margin_large"
+            android:maxWidth="@dimen/element_margin_large"
+            android:minWidth="@dimen/element_margin_large"
             android:visibility="@{viewModel.loadingResults ? View.VISIBLE : View.GONE}"/>
 
         <Button
-            android:id="@+id/main_clear_search_button"
+            android:id="@+id/search_clear_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_constraintRight_toRightOf="@id/main_search_container"
-            app:layout_constraintTop_toTopOf="@id/main_search_container"
+            app:layout_constraintRight_toLeftOf="parent"
+            app:layout_constraintTop_toTopOf="@id/search_search_field"
+            app:layout_constraintBottom_toBottomOf="@id/search_search_field"
             android:layout_marginTop="8dp"
-            app:layout_constraintBottom_toBottomOf="@id/main_search_container"
             android:drawableLeft="@drawable/ic_clear_black_24dp"
             android:background="@android:color/transparent"
             android:minWidth="0dp"
-            android:paddingLeft="24dp"
+            android:paddingLeft="@dimen/element_margin_large"
             android:visibility="@{viewModel.clearSearchTermUiVisible ? View.VISIBLE : View.GONE}"
             android:onClick="@{() -> viewModel.clearSearchTerm()}"/>
 
         <ImageView
-            android:id="@+id/main_no_results_icon"
+            android:id="@+id/search_no_results_icon"
             android:layout_width="96dp"
             android:layout_height="96dp"
             android:src="@drawable/sakura_leaf_lightgray"
             android:layout_marginTop="144dp"
-            app:layout_constraintTop_toBottomOf="@id/main_search_container"
+            app:layout_constraintTop_toBottomOf="@id/search_search_field"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             android:visibility="@{viewModel.emptyScreenUiVisible ? View.VISIBLE : View.GONE}"/>
 
         <ListView
-            android:id="@+id/search_results_list_view"
+            android:id="@+id/search_results_list"
             style="@style/ListViewBaseStyle"
-            android:layout_marginTop="16dp"
-            app:layout_constraintTop_toBottomOf="@id/main_search_container"
+            android:layout_marginTop="@dimen/element_margin_large"
+            app:layout_constraintTop_toBottomOf="@id/search_search_field"
+            app:layout_constraintLeft_toLeftOf="@id/search_search_field"
             android:visibility="@{viewModel.areSearchResultsVisible ? View.VISIBLE : View.GONE}" />
 
     </android.support.constraint.ConstraintLayout>
