--- a/app/src/main/res/layout/activity_search_result.xml
+++ b/app/src/main/res/layout/activity_search_result.xml
@@ -13,54 +13,52 @@
 
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_margin="@dimen/activity_margin">
+        android:layout_height="match_parent">
 
-        <Button
-            android:id="@+id/search_result_navigation_button"
-            style="@style/NavigationButtonStyle"
-            android:background="@drawable/ic_arrow_back_black_24dp"
-            android:onClick="@{() -> viewModel.goBack()}"/>
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/search_result_toolbar"
+            style="@style/DefaultToolbarStyle"
+            android:layout_alignParentTop="true">
+            <android.support.constraint.ConstraintLayout
+                android:id="@+id/search_result_favorited_container"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingEnd="@dimen/activity_margin">
 
-        <LinearLayout
-            android:id="@+id/search_result_favorited_container"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintRight_toLeftOf="parent"
-            app:layout_constraintTop_toTopOf="@id/search_result_navigation_button"
-            app:layout_constraintBottom_toBottomOf="@id/search_result_navigation_button"
-            android:layout_marginTop="@dimen/element_margin_base">
+                <com.mikhaellopez.circularprogressbar.CircularProgressBar
+                    android:id="@+id/search_result_autofavorite_progress"
+                    android:layout_width="@dimen/element_margin_large"
+                    android:layout_height="@dimen/element_margin_large"
+                    app:cpb_progressbar_color="@android:color/white"
+                    app:cpb_progressbar_width="2dp"
+                    app:cpb_background_progressbar_color="@color/subtleGray"
+                    app:cpb_background_progressbar_width="2dp"
+                    app:layout_constraintRight_toRightOf="parent"
+                    android:visibility="@{viewModel.isFrequent ? View.GONE : View.VISIBLE}"/>
 
-            <com.mikhaellopez.circularprogressbar.CircularProgressBar
-                android:id="@+id/search_result_autofavorite_progress"
-                android:layout_width="@dimen/element_margin_large"
-                android:layout_height="@dimen/element_margin_large"
-                app:cpb_progressbar_color="@color/colorPrimary"
-                app:cpb_progressbar_width="2dp"
-                app:cpb_background_progressbar_color="@color/subtleGray"
-                app:cpb_background_progressbar_width="2dp"
-                android:visibility="@{viewModel.isFrequent ? View.GONE : View.VISIBLE}"/>
+                <ImageView
+                    android:id="@+id/search_result_is_favorited"
+                    android:layout_width="@dimen/element_margin_large"
+                    android:layout_height="@dimen/element_margin_large"
+                    android:src="@drawable/ic_stars_black_24dp"
+                    app:layout_constraintRight_toRightOf="parent"
+                    android:visibility="@{viewModel.isFrequent ? View.VISIBLE : View.GONE}"/>
 
-            <ImageView
-                android:id="@+id/search_result_is_favorited"
-                android:layout_width="@dimen/element_margin_large"
-                android:layout_height="@dimen/element_margin_large"
-                android:src="@drawable/ic_stars_black_24dp"
-                android:visibility="@{viewModel.isFrequent ? View.VISIBLE : View.GONE}"/>
-
-        </LinearLayout>
+            </android.support.constraint.ConstraintLayout>
+        </android.support.v7.widget.Toolbar>
 
         <TextView
             android:id="@+id/search_result_furigana"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             style="@style/FuriganaTextViewStyle"
-            android:layout_marginStart="@dimen/element_margin_large"
+            android:layout_marginStart="@dimen/activity_margin"
             android:text="@{viewModel.searchResult.japaneseReading}"
             android:textSize="@dimen/textSize_base"
-            android:layout_marginTop="@dimen/element_margin_extra_large"
-            app:layout_constraintTop_toBottomOf="@id/search_result_navigation_button"
-            app:layout_constraintLeft_toRightOf="@id/search_result_navigation_button"/>
+            app:layout_goneMarginTop="@dimen/element_margin_base"
+            android:layout_marginTop="@dimen/element_margin_large"
+            app:layout_constraintTop_toBottomOf="@id/search_result_toolbar"
+            app:layout_constraintLeft_toLeftOf="parent"/>
 
         <TextView
             android:id="@+id/search_result_kana"
@@ -91,6 +89,7 @@
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_marginTop="@dimen/element_margin_extra_large"
+            android:layout_marginLeft="@dimen/activity_margin"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@id/search_result_is_common"
