--- a/app/src/main/res/layout/activity_search_result.xml
+++ b/app/src/main/res/layout/activity_search_result.xml
@@ -22,27 +22,50 @@
             <android.support.constraint.ConstraintLayout
                 android:id="@+id/search_result_favorited_container"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:paddingEnd="@dimen/activity_margin">
+                android:layout_height="wrap_content">
 
-                <com.mikhaellopez.circularprogressbar.CircularProgressBar
-                    android:id="@+id/search_result_autofavorite_progress"
-                    android:layout_width="@dimen/element_margin_large"
-                    android:layout_height="@dimen/element_margin_large"
-                    app:cpb_progressbar_color="@android:color/white"
-                    app:cpb_progressbar_width="2dp"
-                    app:cpb_background_progressbar_color="@color/subtleGray"
-                    app:cpb_background_progressbar_width="2dp"
-                    app:layout_constraintRight_toRightOf="parent"
-                    android:visibility="@{viewModel.isFavorited ? View.GONE : View.VISIBLE}"/>
+                <TextView
+                    android:id="@+id/search_result_favorite_label"
+                    style="@style/ToolbarDescriptionTextBlockStyle"
+                    android:text="Favorite"
+                    app:layout_constraintBottom_toBottomOf="@id/search_result_favorite_toggle_container"
+                    app:layout_constraintTop_toTopOf="@id/search_result_favorite_toggle_container"
+                    app:layout_constraintRight_toLeftOf="@id/search_result_favorite_toggle_container" />
 
-                <ImageView
-                    android:id="@+id/search_result_is_favorited"
-                    android:layout_width="@dimen/element_margin_large"
-                    android:layout_height="@dimen/element_margin_large"
-                    android:src="@drawable/ic_stars_black_24dp"
-                    app:layout_constraintRight_toRightOf="parent"
-                    android:visibility="@{viewModel.isFavorited ? View.VISIBLE : View.GONE}"/>
+                <FrameLayout
+                    android:id="@+id/search_result_favorite_toggle_container"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:padding="@dimen/element_margin_base"
+                    android:clickable="true"
+                    android:focusable="true"
+                    android:background="?android:attr/selectableItemBackground"
+                    android:onClick="@{() -> viewModel.toggleFavorite()}"
+                    app:layout_constraintRight_toRightOf="parent">
+                    <com.mikhaellopez.circularprogressbar.CircularProgressBar
+                        android:id="@+id/search_result_autofavorite_progress"
+                        android:layout_width="@dimen/element_margin_large"
+                        android:layout_height="@dimen/element_margin_large"
+                        app:cpb_progressbar_color="@android:color/white"
+                        app:cpb_progressbar_width="2dp"
+                        app:cpb_background_progressbar_color="@color/subtleGray"
+                        app:cpb_background_progressbar_width="2dp"
+                        android:visibility="@{viewModel.canBeAutoFavorited ? View.VISIBLE : View.GONE}"/>
+
+                    <ImageView
+                        android:id="@+id/search_result_is_favorited"
+                        android:layout_width="@dimen/element_margin_large"
+                        android:layout_height="@dimen/element_margin_large"
+                        android:src="@drawable/ic_stars_black_24dp"
+                        android:visibility="@{viewModel.isFavorited ? View.VISIBLE : View.GONE}"/>
+
+                    <ImageView
+                        android:id="@+id/search_result_manually_favorite"
+                        android:layout_width="@dimen/element_margin_large"
+                        android:layout_height="@dimen/element_margin_large"
+                        android:src="@drawable/ic_star_border_black_24dp"
+                        android:visibility="@{viewModel.canBeManuallyFavorited ? View.VISIBLE : View.GONE}"/>
+                </FrameLayout>
 
             </android.support.constraint.ConstraintLayout>
         </android.support.v7.widget.Toolbar>
@@ -67,6 +90,7 @@
             style="@style/KanjiTextViewStyle"
             android:text="@{viewModel.searchResult.japaneseWord}"
             android:textSize="@dimen/textSize_extraExtraLarge"
+            android:textIsSelectable="true"
             app:layout_constraintTop_toBottomOf="@id/search_result_furigana"
             app:layout_constraintLeft_toLeftOf="@id/search_result_furigana"/>
 
