--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -41,4 +41,10 @@
         <item name="android:theme">@style/ThemeOverlay.AppCompat.ActionBar</item>
     </style>
 
+    <style name="ToolbarDescriptionTextBlockStyle">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textColor">@android:color/white</item>
+        <item name="android:layout_marginEnd">@dimen/element_margin_base</item>
+    </style>
 </resources>
