Tracking of open activity to select the appropriate menu item as open

--- a/app/src/main/res/menu/drawer_main.xml
+++ b/app/src/main/res/menu/drawer_main.xml
@@ -5,8 +5,7 @@
         <item
             android:id="@+id/drawer_main_search"
             android:icon="@drawable/ic_search_accented_24dp"
-            android:title="Search"
-            android:checked="true"/>
+            android:title="Search"/>
         <item
             android:id="@+id/drawer_main_history"
             android:icon="@drawable/ic_history_accented_24dp"
