--- a/app/src/main/res/layout/activity_search_result.xml
+++ b/app/src/main/res/layout/activity_search_result.xml
@@ -18,19 +18,11 @@
         <android.support.v7.widget.Toolbar
             android:id="@+id/search_result_toolbar"
             style="@style/DefaultToolbarStyle"
-            android:layout_alignParentTop="true">
+            app:layout_constraintTop_toTopOf="parent">
             <android.support.constraint.ConstraintLayout
                 android:id="@+id/search_result_favorited_container"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
-
-                <TextView
-                    android:id="@+id/search_result_favorite_label"
-                    style="@style/ToolbarDescriptionTextBlockStyle"
-                    android:text="Favorite"
-                    app:layout_constraintBottom_toBottomOf="@id/search_result_favorite_toggle_container"
-                    app:layout_constraintTop_toTopOf="@id/search_result_favorite_toggle_container"
-                    app:layout_constraintRight_toLeftOf="@id/search_result_favorite_toggle_container" />
 
                 <FrameLayout
                     android:id="@+id/search_result_favorite_toggle_container"
@@ -42,15 +34,6 @@
                     android:background="?android:attr/selectableItemBackground"
                     android:onClick="@{() -> viewModel.toggleFavorite()}"
                     app:layout_constraintRight_toRightOf="parent">
-                    <com.mikhaellopez.circularprogressbar.CircularProgressBar
-                        android:id="@+id/search_result_autofavorite_progress"
-                        android:layout_width="@dimen/element_margin_large"
-                        android:layout_height="@dimen/element_margin_large"
-                        app:cpb_progressbar_color="@android:color/white"
-                        app:cpb_progressbar_width="2dp"
-                        app:cpb_background_progressbar_color="@color/subtleGray"
-                        app:cpb_background_progressbar_width="2dp"
-                        android:visibility="@{viewModel.canBeAutoFavorited ? View.VISIBLE : View.GONE}"/>
 
                     <ImageView
                         android:id="@+id/search_result_is_favorited"
@@ -69,6 +52,18 @@
 
             </android.support.constraint.ConstraintLayout>
         </android.support.v7.widget.Toolbar>
+
+        <ProgressBar
+            style="@android:style/Widget.ProgressBar.Horizontal"
+            android:shadowColor="@color/subtleGray"
+            android:progressDrawable="@drawable/progress_bar_horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:progress="@{viewModel.historyPercentage}"
+            android:maxHeight="2dp"
+            android:minHeight="2dp"
+            app:layout_constraintTop_toBottomOf="@id/search_result_toolbar"
+            android:visibility="@{viewModel.isFavorited ? View.GONE : View.VISIBLE}"/>
 
         <TextView
             android:id="@+id/search_result_furigana"
