--- a/app/src/main/res/layout/fragment_history.xml
+++ b/app/src/main/res/layout/fragment_history.xml
@@ -16,7 +16,10 @@
         <android.support.v7.widget.Toolbar
             android:id="@+id/history_toolbar"
             style="@style/DefaultToolbarStyle"
-            app:layout_constraintTop_toTopOf="parent">
+            android:layout_width="match_parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent">
 
             <android.support.constraint.ConstraintLayout
                 android:layout_width="match_parent"
@@ -29,7 +32,7 @@
                     android:layout_marginEnd="@dimen/activity_margin"
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintRight_toLeftOf="parent"
+                    app:layout_constraintRight_toRightOf="parent"
                     android:checked="@={viewModel.showOnlyFavoriteResults}" />
 
                 <TextView
@@ -44,9 +47,24 @@
 
         </android.support.v7.widget.Toolbar>
 
-        <ListView
-            android:id="@+id/history_results_list_view"
-            style="@style/ListViewBaseStyle"
-            app:layout_constraintTop_toBottomOf="@id/history_toolbar"/>
+        <android.support.constraint.ConstraintLayout
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            app:layout_constraintTop_toBottomOf="@id/history_toolbar"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent">
+            <ListView
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:id="@+id/history_results_list_view"
+                style="@style/ListViewBaseStyle"/>
+        </android.support.constraint.ConstraintLayout>
+
+
     </android.support.constraint.ConstraintLayout>
 </layout>
