--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -20,7 +20,7 @@
         <android.support.v7.widget.Toolbar
             android:id="@+id/search_toolbar"
             style="@style/DefaultToolbarStyle"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"/>
 
         <android.support.constraint.ConstraintLayout
             android:id="@+id/search_header_container"
@@ -40,7 +40,7 @@
                 android:layout_weight="0"
                 android:src="@drawable/ic_search_accented_24dp"
                 android:background="@android:color/transparent"
-                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="@id/search_search_field"
                 app:layout_constraintLeft_toLeftOf="parent" />
 
             <EditText
@@ -53,7 +53,6 @@
                 android:textSize="24sp"
                 android:layout_marginStart="@dimen/element_margin_large"
                 android:layout_marginEnd="@dimen/activity_margin"
-                android:layout_marginBottom="4dp"
                 android:imeOptions="actionSearch"
                 android:imeActionLabel="Search"
                 android:imeActionId="1"
@@ -70,7 +69,7 @@
                 android:id="@+id/search_loading_indicator"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                app:layout_constraintRight_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintTop_toTopOf="@id/search_search_field"
                 app:layout_constraintBottom_toBottomOf="@id/search_search_field"
                 android:minHeight="@dimen/element_margin_large"
@@ -83,12 +82,13 @@
                 android:id="@+id/search_clear_button"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                app:layout_constraintRight_toLeftOf="parent"
-                app:layout_constraintTop_toTopOf="@id/search_find_icon"
-                app:layout_constraintBottom_toBottomOf="@id/search_find_icon"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toTopOf="@id/search_search_field"
+                app:layout_constraintBottom_toBottomOf="@id/search_search_field"
                 android:drawableStart="@drawable/ic_clear_black_24dp"
                 android:background="?android:attr/selectableItemBackground"
                 android:minWidth="0dp"
+                android:minHeight="0dp"
                 android:visibility="@{viewModel.clearSearchTermUiVisible ? View.VISIBLE : View.GONE}"
                 android:onClick="@{() -> viewModel.clearSearchTerm()}"/>
 
