--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -98,7 +98,7 @@
             android:id="@+id/search_no_results_icon"
             android:layout_width="96dp"
             android:layout_height="96dp"
-            android:src="@drawable/sakura_leaf_lightgray"
+            android:src="@drawable/fuji_gray"
             android:layout_marginTop="144dp"
             app:layout_constraintTop_toBottomOf="@id/search_header_container"
             app:layout_constraintLeft_toLeftOf="parent"
