--- a/app/src/main/res/layout/main_drawer_header.xml
+++ b/app/src/main/res/layout/main_drawer_header.xml
@@ -3,7 +3,8 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:paddingTop="72dp">
+    android:paddingTop="72dp"
+    android:paddingLeft="@dimen/element_margin_base">
     <ImageView
         android:layout_width="64dp"
         android:layout_height="64dp"
