Shows a no results message when no dictionary results are found

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -29,6 +29,10 @@
         <item name="android:textSize">@dimen/textSize_base</item>
     </style>
 
+    <style name="SubtleTextViewStyle" parent="TextViewBaseStyle">
+        <item name="android:textColor">@color/subtleGray</item>
+    </style>
+
     <style name="NavigationButtonStyle">
         <item name="android:layout_width">@dimen/button_base_size</item>
         <item name="android:layout_height">@dimen/button_base_size</item>
