--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -105,6 +105,18 @@
             app:layout_constraintRight_toRightOf="parent"
             android:visibility="@{viewModel.emptyScreenUiVisible ? View.VISIBLE : View.GONE}"/>
 
+        <TextView
+            android:id="@+id/search_no_results_message"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/element_margin_large"
+            app:layout_constraintTop_toBottomOf="@id/search_no_results_icon"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            style="@style/SubtleTextViewStyle"
+            android:visibility="@{viewModel.isNoResultsMessageVisible ? View.VISIBLE : View.GONE}"
+            android:text="@{viewModel.noResultsMessage}"/>
+
         <ListView
             android:id="@+id/search_results_list"
             style="@style/ListViewBaseStyle"
